<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="video_chat_pk">Connecting</string>
    <string name="scene_video_chat">Interactive Video streaming</string>
    <string name="create_voice_chat_room_msg">No one has created a voice chat room. Create one.</string>
    <string name="create_voice_chat_room_title">Create a Room</string>
    <string name="live_exp_time_txt">The duration of LIVE can\'t exceed 10 minutes</string>
    <string name="login_limited_service">The duration of LIVE can\'t exceed 10 minutes in this demo.</string>
    <string name="action_flip">Flip</string>
    <string name="action_beautify">Beautify</string>
    <string name="settings">Settings</string>
    <string name="start_live">Go LIVE</string>
    <string name="network_error">No internet connection. Connect to the internet and ty again.</string>
    <string name="frame_rate">Frame rate</string>
    <string name="resolution">Resolution</string>
    <string name="bitrate">Bitrate</string>
    <string name="camera_flip">Flip</string>
    <string name="camera">Camera</string>
    <string name="mic_text">Microphone</string>
    <string name="music_text">Audio</string>
    <string name="beautify_text">Beautify</string>
    <string name="filter_text">Fliters</string>
    <string name="sticker_text">Stickers</string>
    <string name="beauty_skin_text">Foundation</string>
    <string name="beauty_none_text">No Effect</string>
    <string name="beauty_smooth_skin_text">Smooth skin</string>
    <string name="beauty_thin_text">Thin face</string>
    <string name="beauty_big_eyes_text">Big eyes</string>
    <string name="filter_none_text">No Filter</string>
    <string name="filter_film_text">Cliche Film</string>
    <string name="filter_cold_ox_text">Cold Oxygen</string>
    <string name="filter_sweet_love_text">Sweet Love</string>
    <string name="filter_night_text">Night</string>
    <string name="sticker_none_text">No Sticker</string>
    <string name="sticker_highlight_text">Highlighter</string>
    <string name="sticker_cartoon_text">Cartoon Boy</string>
    <string name="sticker_star_text">Shattered Star</string>
    <string name="sticker_glass_text">Retro Glass</string>
    <string name="start_live_error">Failed to get LIVE-related information. Please try again.</string>
    <string name="start_live_fail">Failed to create a LIVE</string>
    <string name="start_live_success">Succeed to create a LIVE</string>
    <string name="say_something">Add comment</string>
    <string name="co_host_list">Co-host list</string>
    <string name="no_co_host_list">No co-host</string>
    <string name="audience">Audience</string>
    <string name="no_application_text">No application</string>
    <string name="no_audience_text">No audience</string>
    <string name="application_text">Application</string>
    <string name="live_user_co_host_txt">Co-host</string>
    <string name="inviting_btn">Inviting</string>
    <string name="accept">Accept</string>
    <string name="invite_user_speak">Make co-host</string>
    <string name="all_seats_filled_up_txt">All host seats have been filled up</string>
    <string name="invite_user_busy">The Invited is busy</string>
    <string name="inviting">Invitation has been sent. Waiting for responding.</string>
    <string name="cant_get_remote_host_error">Error: can\'t get data about remote host </string>
    <string name="invitation_has_sent_info">An invitation has been sent to %s. Waiting for response</string>
    <string name="pk_ing">In PK</string>
    <string name="invite_cohost">Invite</string>
    <string name="remove_co_host_txt">Disconnect</string>
    <string name="co_host_text">Request</string>
    <string name="remove_co_host_text">Disconnect</string>
    <string name="block_text">Block</string>
    <string name="un_block_text">Unblock</string>
    <string name="mute_txt">Mute</string>
    <string name="unmute_txt">Unmute</string>
    <string name="already_send_application_msg">Application has been sent</string>
    <string name="already_co_host_msg">You have been a co-host</string>
    <string name="confirm_remove_co_host_msg">Sure to block this co-host seat? If so, an audience can\'t be a co-host in the seat,\n and the co-host in the seat will be changed into an audience.</string>
    <string name="close_room_mode">Turn off chat room mode?</string>
    <string name="have_sent_invite_txt">You have sent an invitation.</string>
    <string name="inviting_confirm_end_txt">Some one has been co-host. Confirm remove?</string>
    <string name="removed_from_co_host">%s has left</string>
    <string name="co_host_busy">Some one has been co-host.</string>
    <string name="back_to_room_list">Error. Go back to the room list page.</string>
    <string name="confirm_end_live">Are you sure end this LIVE？</string>
    <string name="add_comments">Add comment</string>
    <string name="user_enter_room">%s entered the room</string>
    <string name="user_exit_room">%s left the room</string>
    <string name="room_close_cause_by_violations">Room has been closed due to violations of Terms of Service.</string>
    <string name="live_exceed_time">The duration of a LIVE can\'t exceed 10 minutes.</string>
    <string name="live_ended_txt">Live has ended</string>
    <string name="co_host_left">Host has disconnected with you</string>
    <string name="user_co_host_txt"> Co-host</string>
    <string name="user_has_audience_txt"> Audience</string>
    <string name="invitation_to_be_co_host">Invitation to be co-host</string>
    <string name="you_force_log_out">A user with the same ID has logged in. You will be forced to log out.</string>
    <string name="user_decline_you_invite">%s declines your invitation</string>
    <string name="invited_you_tobe_co_host">%s invited you to be co-host.</string>
    <string name="btn_decline">Decline</string>
    <string name="user_has_left">%s has left</string>
    <string name="video_chat_room_name">%s\'s room</string>
    <string name="you_has_audience_txt">You have been an audience</string>
    <string name="you_has_co_host_txt">You have been a guest</string>
    <string name="video_you_has_be_audience_txt">You have been removed from guest</string>
    <string name="you_unmuted_txt">You have been unmuted</string>
    <string name="you_be_muted_txt">You have been muted</string>
    <string name="voice_room_live_ing">On LIVE</string>
    <string name="filter_creamy">Creamy</string>
    <string name="filter_oxygen">Oxygen</string>
    <string name="filter_peach">Peach</string>

    <string name="sticker_caihongzhu">Cute Piggy</string>
    <string name="sticker_baby">Baby Effects</string>
    <string name="sticker_tianzhu">Tianzhu Girl</string>
    <string name="sticker_heimao">Cat with Glasses</string>
    <string name="network_good">Good network</string>
    <string name="network_bad">Bad network</string>

    <string name="strength_txt">Strength</string>
    <string name="video_user_decline_you_invite">%s declines your invitation</string>
    <string name="close_room">Close room</string>
    <string name="confirm_end_live_btn_txt">End LIVE</string>
    <string name="co_host_seat">Co-host seat</string>
    <string name="host_name">Host</string>
    <string name="action_send">Send</string>
    <string name="back_music_txt">Background Music</string>
    <string name="music_volume_txt">Music sound</string>
    <string name="voice_volume_txt">Voice sound</string>
    <string name="user_become_co_host_txt">%s becomes a co-host.</string>
    <string name="user_become_audi_txt">%s becomes an audience.</string>
    <string name="room_not_exist">The room does not exist. Go back to the room list page</string>

    <string name="btn_confirm">Confirm</string>
    <string name="effect_toast">This open-source project doesn\'t support Effects-related function. Please download BytePlus demo to experience it.</string>
</resources>