<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/no_select"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/effect_btn_selected_bg"
        android:padding="10dp"
        android:src="@drawable/effect_no_select"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/effect_shaonvmanhua"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sticker_none_text"
        android:textColor="#86909C"
        android:textSize="12sp"
        android:lines="2"
        app:layout_constraintLeft_toLeftOf="@id/no_select"
        app:layout_constraintRight_toRightOf="@id/no_select"
        app:layout_constraintTop_toBottomOf="@id/no_select" />

    <ImageView
        android:id="@+id/effect_shaonvmanhua"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="2dp"
        android:src="@drawable/icon_caihongzhuxiaodi"
        app:layout_constraintLeft_toRightOf="@id/no_select"
        app:layout_constraintRight_toLeftOf="@id/effect_manhuanansheng"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sticker_caihongzhu"
        android:textColor="#86909C"
        android:textSize="12sp"
        android:maxWidth="60dp"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/effect_shaonvmanhua"
        app:layout_constraintRight_toRightOf="@id/effect_shaonvmanhua"
        app:layout_constraintTop_toBottomOf="@id/effect_shaonvmanhua" />

    <ImageView
        android:id="@+id/effect_manhuanansheng"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="2dp"
        android:src="@drawable/icon_baby_gan"
        app:layout_constraintLeft_toRightOf="@id/effect_shaonvmanhua"
        app:layout_constraintRight_toLeftOf="@id/effect_suixingshan"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sticker_baby"
        android:textColor="#86909C"
        android:textSize="12sp"
        android:gravity="center"
        android:maxWidth="60dp"
        app:layout_constraintLeft_toLeftOf="@id/effect_manhuanansheng"
        app:layout_constraintRight_toRightOf="@id/effect_manhuanansheng"
        app:layout_constraintTop_toBottomOf="@id/effect_manhuanansheng" />

    <ImageView
        android:id="@+id/effect_suixingshan"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="2dp"
        android:src="@drawable/icon_tianzhu_girl"
        app:layout_constraintLeft_toRightOf="@id/effect_manhuanansheng"
        app:layout_constraintRight_toLeftOf="@id/effect_fuguyanjing"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sticker_tianzhu"
        android:textColor="#86909C"
        android:textSize="12sp"
        android:maxWidth="60dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="@id/effect_suixingshan"
        app:layout_constraintRight_toRightOf="@id/effect_suixingshan"
        app:layout_constraintTop_toBottomOf="@id/effect_suixingshan" />

    <ImageView
        android:id="@+id/effect_fuguyanjing"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="2dp"
        android:src="@drawable/icon_heimaoyanjing"
        app:layout_constraintLeft_toRightOf="@id/effect_suixingshan"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sticker_heimao"
        android:maxWidth="60dp"
        android:textColor="#86909C"
        android:textSize="12sp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="@id/effect_fuguyanjing"
        app:layout_constraintRight_toRightOf="@id/effect_fuguyanjing"
        app:layout_constraintTop_toBottomOf="@id/effect_fuguyanjing" />

</androidx.constraintlayout.widget.ConstraintLayout>