<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_video_chat_users_bg"
    android:paddingHorizontal="16dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/setting_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/dialog_text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/video_setting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/setting_dialog_title">

        <com.volcengine.vertcdemo.core.widget.PressedImageView
            android:id="@+id/switch_camera_iv"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:background="@drawable/setting_button_bg"
            android:padding="12dp"
            android:src="@drawable/video_chat_switch_camera"
            app:layout_constraintBottom_toBottomOf="@id/mic_iv"
            app:layout_constraintEnd_toStartOf="@id/mic_iv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/camera_flip"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@id/switch_camera_iv"
            app:layout_constraintRight_toRightOf="@id/switch_camera_iv"
            app:layout_constraintTop_toBottomOf="@id/switch_camera_iv" />


        <com.volcengine.vertcdemo.core.widget.PressedImageView
            android:id="@+id/mic_iv"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/setting_button_bg"
            android:padding="12dp"
            android:src="@drawable/video_chat_effect"
            app:layout_constraintEnd_toStartOf="@id/camera_iv"
            app:layout_constraintStart_toEndOf="@id/switch_camera_iv"
            app:layout_constraintTop_toTopOf="@id/switch_camera_iv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/microphone"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@id/mic_iv"
            app:layout_constraintRight_toRightOf="@id/mic_iv"
            app:layout_constraintTop_toBottomOf="@id/mic_iv" />

        <com.volcengine.vertcdemo.core.widget.PressedImageView
            android:id="@+id/camera_iv"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:background="@drawable/setting_button_bg"
            android:padding="12dp"
            android:src="@drawable/settings"
            app:layout_constraintLeft_toRightOf="@id/mic_iv"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/mic_iv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/camera"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/camera_iv"
            app:layout_constraintStart_toEndOf="@id/camera_iv"
            app:layout_constraintTop_toBottomOf="@id/camera_iv" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="38dp"
            android:background="#5D626C"
            app:layout_constraintTop_toBottomOf="@id/camera_iv" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/frame_rate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/frame_rate"
        android:textColor="@color/dialog_text_color"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/video_setting_layout" />

    <RadioGroup
        android:id="@+id/frame_rate_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/frame_rate_tv"
        app:layout_constraintStart_toEndOf="@id/label_barrier"
        app:layout_constraintTop_toTopOf="@id/frame_rate_tv">

        <RadioButton
            android:id="@+id/frame_rate_15"
            android:layout_width="64dp"
            android:layout_height="32dp"
            android:background="@drawable/radio_button_bg"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="15"
            android:textColor="#86909C" />

        <RadioButton
            android:id="@+id/frame_rate_20"
            android:layout_width="64dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/radio_button_bg"
            android:button="@null"
            android:gravity="center"
            android:text="20"
            android:textColor="#86909C" />
    </RadioGroup>

    <TextView
        android:id="@+id/resolution_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/resolution"
        android:textColor="@color/dialog_text_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_rate_tv" />

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@id/resolution_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_barrier"
        app:layout_constraintTop_toTopOf="@id/resolution_tv">

        <RadioGroup
            android:id="@+id/resolution_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/resolution_480"
                android:layout_width="64dp"
                android:layout_height="32dp"
                android:background="@drawable/radio_button_bg"
                android:button="@null"
                android:gravity="center"
                android:text="480p"
                android:textColor="#86909C" />

            <RadioButton
                android:id="@+id/resolution_540"
                android:layout_width="64dp"
                android:layout_height="32dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/radio_button_bg"
                android:button="@null"
                android:gravity="center"
                android:text="540p"
                android:textColor="#86909C" />

            <RadioButton
                android:id="@+id/resolution_720"
                android:layout_width="64dp"
                android:layout_height="32dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/radio_button_bg"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="720p"
                android:textColor="#86909C" />

            <RadioButton
                android:id="@+id/resolution_1080"
                android:layout_width="64dp"
                android:layout_height="32dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/radio_button_bg"
                android:button="@null"
                android:gravity="center"
                android:text="1080p"
                android:textColor="#86909C" />

        </RadioGroup>

    </HorizontalScrollView>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/label_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="end"
        app:barrierMargin="10dp"
        app:constraint_referenced_ids="frame_rate_tv, resolution_tv" />

    <TextView
        android:id="@+id/bit_rate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/bitrate"
        android:textColor="@color/dialog_text_color"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resolution_tv" />

    <TextView
        android:id="@+id/bit_rate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:textColor="@color/dialog_text_color"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resolution_tv"
        tools:text="800 kbps" />

    <SeekBar
        android:id="@+id/bit_rate_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:max="100"
        android:maxHeight="3dp"
        app:layout_constraintTop_toBottomOf="@id/bit_rate_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>